# lighting

./: CMakeLists.txt  README.md  katka_event.ino
components/adapters/: BitToRMTMapper.cpp  BitToRMTMapper.h  CMakeLists.txt  ConfigsBuilder.h  Encoder.cpp  Encoder.h  FreeRTOSTimer.cpp  FreeRTOSTimer.h  MemoryMonitor.cpp  MemoryMonitor.h  RMTAdapter.cpp  RMTAdapter.h  RMTConfigBuilder.h  RMTEncoder.cpp  (+7 more)
components/application/: CMakeLists.txt  Color.h  Led.h  Strip.cpp  Strip.h  Symbol.h  Symbolizer.cpp  Symbolizer.h
components/application/commands/: ApplyCommand.h  ApplyCommandHandler.cpp  ApplyCommandHandler.h  ApplyWithChasingCommand.h  ApplyWithChasingCommandHandler.cpp  ApplyWithChasingCommandHandler.h  Command.h  CommandHandler.cpp  CommandHandler.h  InitializeCommand.h  InitializeCommandHandler.cpp  InitializeCommandHandler.h  InitializeStripCommand.h  InitializeStripCommandHandler.cpp  InitializeStripCommandHandler.h  TurnOnStripCommand.h  TurnOnStripCommandHandler.cpp  TurnOnStripCommandHandler.h  TurnOnStripWithChasingCommand.h  TurnOnStripWithChasingCommandHandler.cpp  TurnOnStripWithChasingCommandHandler.h
components/application/domain/: Color.h  Led.h  Strip.cpp  Symbol.h  Timing.h
components/application/domain/services/: ChasingPattern.cpp  ChasingPattern.h  SequenceConverter.h  SymbolsConverter.cpp  SymbolsConverter.h
components/application/ports/: IPixelsSender.h  ITimer.h
components/application/services/: CMakeLists.txt  SequenceConverter.cpp  SequenceConverter.h
main/: CMakeLists.txt  main.cpp
notes/: RMT.md  encoder.md  led.md  setup.md
