idf_component_register(
    SRCS 
        "domain/Strip.cpp" 
        "domain/services/SymbolsConverter.cpp"
        "domain/services/ChasingPattern.cpp"
        "commands/InitializeCommandHandler.cpp"
        "commands/TurnOnStripCommandHandler.cpp"
        "commands/TurnOnStripWithChasingCommandHandler.cpp"
    INCLUDE_DIRS 
        "."
        "domain"
        "commands"
)