idf_component_register(
    SRCS 
        "domain/Strip.cpp" 
        "domain/services/SymbolsConverter.cpp"
        "domain/services/ChasingPattern.cpp"
        "commands/CommandHandler.cpp"
        "commands/InitializeCommandHandler.cpp"
        "commands/ApplyCommandHandler.cpp"
        "commands/ApplyWithChasingCommandHandler.cpp"
    INCLUDE_DIRS 
        "."
        "domain"
        "commands"
)